tdf#124266 : Paint cell if formula-cell has changed even if...

not dirty.

Change-Id: Id54811009079438945bb162dd3eb8705ce174781